<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="Restart">Restart Game!</string>
    <string name="action_settings">Settings</string>
    <string name="player1">Player 1</string>
    <string name="playComputer">Single Player</string>
    <string name="title_activity_display_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="description_necessaryClicks">If you want to have only necessary clicks after ending a game.</string>
    <string name="switch_necessaryClicks">Only Necessary Clicks</string>
    <string name="preference_settings">com.goodyear.tictactoe.settings</string>
    <string name="settings_necessaryClicks">settings_necessaryClicks</string>
    <string name="switch_multiplayer">Multiplayer</string>
    <string name="settings_multiplayer">settings_multiplayer</string>
    <string name="mode_easy">Einfach</string>
    <string name="mode_middle">Mittel</string>
    <string name="mode_difficult">Schwer</string>
    <string name="settings_mode">settings_singleplayerMode</string>

</resources>
