<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.goodyear.tictactoe.DisplaySettingsActivity">


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_necessaryClicks"
        android:id="@+id/switch_necessaryClicks"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/description_necessaryClicks"
        android:id="@+id/textView_necessaryClicks"
        android:layout_below="@+id/switch_necessaryClicks"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_multiplayer"
        android:id="@+id/switch_multiplayer"
        android:layout_below="@id/textView_necessaryClicks"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_multiplayer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup_multiplayerMode">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_easy"
            android:id="@+id/radioButton_easy"
            android:checked="false"
            android:onClick="setSingleplayerMode"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_middle"
            android:id="@+id/radioButton_middle"
            android:checked="false"
            android:onClick="setSingleplayerMode" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_difficult"
            android:id="@+id/radioButton_difficult"
            android:checked="false"
            android:onClick="setSingleplayerMode" />

    </RadioGroup>



</RelativeLayout>
